update cicd.yml