@@ -32,7 +32,9 @@ dependencies {
 }
 
 tasks.named('test') {
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 jacocoTestReport {
